--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "clean": "rm -rf build && mkdir build",
+    "build": "npm run clean && babel api --out-dir build",
+    "start": "node build/app.js",
+    "dev": "nodemon --exec babel-node api/app.js"
   },
   "author": "",
   "license": "ISC",
@@ -16,6 +19,13 @@
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.1.0",
     "eslint-plugin-import": "^2.20.1",
-    "eslint-plugin-react": "^7.19.0"
+    "eslint-plugin-react": "^7.19.0",
+    "nodemon": "^2.0.2"
+  },
+  "dependencies": {
+    "@babel/preset-env": "^7.8.7",
+    "@babel/preset-react": "^7.8.3",
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1"
   }
 }
