--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "pg": "^8.0.0",
-    "sequelize": "^5.21.5"
+    "regenerator-runtime": "^0.13.5",
+    "sequelize": "^5.21.5",
+    "validator": "^13.0.0"
   }
 }
