--- a/package.json
+++ b/package.json
@@ -25,10 +25,14 @@
     "eslint-plugin-react": "^7.17.0"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "pg": "^8.0.0",
-    "sequelize": "^5.21.5"
+    "regenerator-runtime": "^0.13.5",
+    "sequelize": "^5.21.5",
+    "validator": "^13.0.0"
   }
 }
