--- a/package.json
+++ b/package.json
@@ -27,17 +27,13 @@
   },
   "dependencies": {
     "@sendgrid/mail": "^7.0.0",
-    "axios": "^0.19.2",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "pg": "^8.0.0",
-    "react-redux": "^7.2.0",
-    "redux-devtools-extension": "^2.13.8",
-    "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.3.0",
     "regenerator-runtime": "^0.13.5",
     "sequelize": "^5.21.5",
     "validator": "^13.0.0"
